// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with multiple Expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    Expense
     of Total 
    $0.00
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with single Expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    Expense
     of Total 
    $1.00
  </h1>
</div>
`;
